--- a/templates/added.html
+++ b/templates/added.html
@@ -4,34 +4,37 @@
     <meta charset="UTF-8">
     <title>success signup</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="{{url_for('static', filename='admin.css')}}">
+    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 </head>
-<body>
-
-    <div class="center" style="height:100vh; top: 50%;">
-
-
-        <div style="text-align: center; padding-top: 10vh;" >
-            <div class="card" style="width: 18rem; height: 20rem; margin: 0 auto;">
+<body style="background: linear-gradient(120deg,rgb(255, 255, 255), rgb(0,184,177)); min-height: 100vh; padding-top: 20px;">
+    <div style="display: flex;justify-content: center;align-items: center;">
+        <div style="display: flex; justify-content: center; align-items: center;flex-direction: column">
+            <div class="card" style="width: 18rem;">
                 <img src="{{url_for('static', filename=usi)}}" class="card-img-top" alt="...">
                 <div class="card-body">
-                    {%  if st %}
-                    <h3 style="text-align: center; font-size: 30px; color:green;">successfully added </h3>
-                    <p> {{val_name}}</p>
-                    <p>{{val_id}}</p>   
-                    {% endif %}
+                    <h3 style="text-align: center;">successfully added</h3>
+                    <p style="text-align: center;">{{val_name}}</p>
+                    <p style="text-align: center;">{{val_id}}</p>
                 </div>
             </div>
+            <br>
+            <div class="btn-group" role="group" aria-label="Basic example">
+                <a href="{{'createstudent'}}" class="btn btn-warning" style="margin: 5px;">Add students</a>
+                <a href="{{'attendance'}}" class="btn btn-danger" style="margin: 5px;">Check Attendance</a>
+                <a href="{{'redirect'}}" class="btn btn-success" style="margin: 5px;">Home</a>
+              </div>
 
 
+        </div> 
 
-            <a href="{{'createstudent'}}" class="btn btn-warning" style="margin: 5px;">Add students</a><br>
-            <a href="{{'attendance'}}" class="btn btn-danger" style="margin: 5px;">Check Attendance</a><br>
-            <a href="{{'redirect'}}" class="btn btn-success" style="margin: 5px;">Home</a><br>
-        </div>>
+            
     </div>
+        
 
 
 </body>
 </html>
+
+
+
