--- a/templates/adminview.html
+++ b/templates/adminview.html
@@ -7,15 +7,16 @@
     <title>Admin</title>
     <link rel="stylesheet" href="{{url_for('static', filename='admin.css')}}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css">    
+
 </head>
 <body>
     <div class = "center">
-        <h1>Welcome {{data['name'] | safe }} </h1>
+        <h1>Welcome {{data['name'] | safe }}</h1>
         <hr>
-        <br>
-        <div class="container">
-            <div class="row">
-                <div class="col">
+        <div class="row">
+            <div class="col" style="display:flex; justify-content:center;padding-bottom: 10px;">
+                
                     <div class="card" style="width: 18rem;">
                         <img src="https://images.unsplash.com/photo-1599508704512-2f19efd1e35f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=675&q=80" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -24,51 +25,85 @@
                     </div>
                 </div>
 
-
-                <div class="col">
-                    <div class="colclass">
-                        <div class="row">
-                            <div class="col">
-                                <h3>Name: {{data['name'] | safe }}</h3>
+                
+                <div class="col" style="margin-left: 5px; margin-right: 5px;">
+                        <div class="colclass" style="background:#FAF0E6; border-radius: 10%;">
+                            <div class="row">
+                                <div class="col">
+                                    <h3 style="text-align: center;">Name: {{data['name'] | safe }}</h3>
+                                </div>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                <h3>Role: {{data['role'] | safe }}</h3>
+                            <div class="row">
+                                <div class="col">
+                                    <h3 style="text-align: center;">Role: {{data['role'] | safe }}</h3>
+                                </div>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                <h3>Collage ID: {{data['c_id'] | safe }}</h3>
+                            <div class="row">
+                                <div class="col">
+                                    <h3 style="text-align: center;">Collage ID: {{data['c_id'] | safe }}</h3>
+                                </div>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                <h3>Collage Name: {{data['c_name'] | safe }}</h3>
+                            <div class="row">
+                                <div class="col">
+                                    <h3 style="text-align: center;">Collage Name: {{data['c_name'] | safe }}</h3>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col">
+                                    <h3 style="text-align: center;">Classes:</h3> 
+                                        {% for x in cl %}
+                                        <h4 style="text-align: center;">{{x['class_name']}}</h4>   
+                                    {% endfor %}
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col">
+                                    <h3 style="text-align: center;">Teachers: </h3>
+                                        {% for x in t %}
+                                        <h4 style="text-align: center;">{{x['name']}}</h4>    
+                                        {% endfor %}
+                                </div>
                             </div>
                         </div>
                     </div>
-
                     <hr>
-
+            </div>
+            <hr>
                     <h2>Functions</h2>
-                    <div class="row">
-                        <div class="col d-flex p-2">
-                            <a href="{{'createstudent'}}" class="btn btn-primary">Add Student</a>
-                        </div>
-                        <div class="col d-flex p-2">
-                            <a href="{{'createteacher'}}" class="btn btn-info">Add Teacher</a>
-                        </div>
-                    </div>
 
-                    <div class="row">
-                        <div class="col d-flex p-2">
-                            <a href="{{'attendance'}}" class="btn btn-warning">Check Attendence</a>
-                        </div>
-                        <div class="col d-flex p-2">
-                            <a href="{{'createclass'}}" class="btn btn-dark">Create Class</a>
-                        </div>
+                <div class="row">
+                    <div class="col d-flex p-2">
+                        <a href="{{'createstudent'}}" class="btn btn-primary">Add Student</a>
                     </div>
+                    <div class="col d-flex p-2">
+                        <a href="{{'createteacher'}}" class="btn btn-info">Add Teacher</a>
+                    </div>
+                </div>
+                
+                <div class="row">
+                    <div class="col d-flex p-2">
+                        <a href="{{'attendance'}}" class="btn btn-warning">Check Attendence</a>
+                    </div>
+                    <div class="col d-flex p-2">
+                        <a href="{{'createclass'}}" class="btn btn-dark">Create Class</a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col d-flex p-2">
+                        <a href="{{'previous'}}" class="btn btn-light">Previous</a>
+                    </div>
+                    <div class="col d-flex p-2">
+                        <a href="{{'updateatt'}}" class="btn btn-success">Update</a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col d-flex p-2">
+                        <a href="{{'editing'}}" class="btn btn-danger">Edit Student</a>
+                    </div>
+                    
+                </div>
                     <hr>
                     <div class="row">
                         <div class="col d-flex p-2">
@@ -78,8 +113,9 @@
                             <a href="{{'logout'}}">logout</a>
                         </div>
                     </div>
+                    
 
-                </div>
+                
 
 
 
@@ -88,22 +124,7 @@
         </div>
 
     </div>
-    <a href="{{'previous'}}">previous</a>
-    <a href="{{'updateatt'}}">update</a>
-    <a href="{{'editing'}}">edit Student</a>
-    </div>
-    <p>classes:</p>
-    <div>
-      {% for x in cl %}
-          <p>{{x['class_name']}}</p>      
-      {% endfor %}
-      </div>
-      <p>teachers:</p>
-      <div>
-        {% for x in t %}
-            <p>{{x['name']}} </p>      
-        {% endfor %}
-        </div>
+   
 
 
 </body>
