--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -2,35 +2,48 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attendance</title>
-    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="{{url_for('static', filename='login.css')}}">
 </head>
 <body>
-    <div style="text-align: center;">
-    <h2 align="center">Check attendance</h2>
-    <form action="{{ url_for('find')}}" id="myform" 
-        enctype="multipart/form-data" method="POST">
-        <label for="age">Number of classes taken:</label>
-        <input type="number" id="id_number" name="num_cls"  placeholder="0" required><br><br> 
-            <label>Classes:</label><br>
-            {% for z in dt %}
-            <input type="radio" id="{{z}}" name="class" value="{{z}}">
-            <label for="{{z}}">{{z}}</label><br>
-            {% endfor %}
-            <label>teachers:</label><br>
-            {% for j in dp %}
-            <input type="radio" id="{{j}}" name="teach" value="{{j}}">
-            <label for="{{j}}">{{j}}</label><br>
-            {% endfor %}
-            <input type="file" name="imgfile" id="imagefile"/><br><br>
+    <div class="center">
+        <h1>Take Attendance</h1>
+        <form action="{{ url_for('find')}}" id="myform" enctype="multipart/form-data" method="POST">
+            <div class="txt_field">
+                <input type="number"  name="num_cls"required>
+                <label>Attendance No.</label>
+            </div>
+            <label> Class: </label>
+            <div class="check" style="display: flex; align-items: center; justify-content: center;">
+                {% for z in dt %}
+                <input type="radio"  name="class" value="{{z}}">
+                <label style="font-size: 16px;">{{z}}</label>
+                {% endfor %}
+            </div>
+            <label> Teacher:</label>
+            <div class="check" style="display: flex; align-items: center; justify-content: center;">
+                {% for j in dp %}
+                <input type="radio"  name="teach" value="{{j}}">
+                <label style="font-size: 16px;">{{j}}</label>
+                {% endfor %}
+            </div>
+            <div class = "imagefile" style="display: flex; align-items: center; justify-content: center;padding-top: 15px;padding-bottom: 15px;">
+                <input type="file" name="imgfile" >
+            </div>
             <input type="submit" />
-    </form>
+            <div class="signup_link">
+                <a href="{{'redirect'}}" style="padding: 5px;">Home</a>
+                <a href="{{'attendance'}}">Check Attendance</a>
+            </div>
+        </form>
     </div>
+
+.
     
-    <div style="text-align: center;">
-    <br><br>
-    <a href="{{'createstudent'}}">Add students</a>
-    <a href="{{'redirect'}}">Home</a><br><br>
-    </div>
+    
+    
+    
 </body>
 </html>
