--- a/templates/updateattendance.html
+++ b/templates/updateattendance.html
@@ -2,47 +2,67 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    
     <title>Attendance update</title>
     <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="{{url_for('static', filename='login.css')}}">
 </head>
 <body>
-    <div style="text-align: center;">
-    <h2 align="center">Check attendance</h2>
-    <form action="{{ url_for('update')}}" id="myform" 
-        enctype="multipart/form-data" method="POST">
-        <label for="">Number of classes taken:</label>
-        <input type="number" id="id_number" name="num_cls"  required><br><br> 
-        {% for z in dt %}
-        <input type="radio" id="{{z}}" name="class" value="{{z}}">
-        <label for="{{z}}">{{z}}</label><br>
-        {% endfor %}   
-        <label for="">Name:</label>
-        <input type="text" id="id_number" name="person"  required><br><br> 
-        <label for="">change status to:</label>
-        <input type="text" id="id_number" name="status"  required><br><br> 
-        <input type="submit" />
-            
-    </form>
-    </div>
-    <div>
-        {% if st==1 %}
-        <p>present :</p>
-        {% for x in newp %}
-            <p>{{x}}</p>
-            {% endfor %}
-        </div>
-        <div>
-            <p>absent :</p>
-            {% for x in newa %}
-                <p>{{x}}</p>
+    <div class="center">
+        <h1>Check attendance</h1>
+        
+        <form action="{{ url_for('update')}}" id="myform" enctype="multipart/form-data" method="POST">
+            <div class="txt_field">
+                <input type="number"  name="num_cls"  required>
+                <label>class number</label>
+            </div>
+            <div class="check" style="display: flex; align-items: center; justify-content: center;">
+                {% for z in dt %}
+                <input type="radio"  name="class" value="{{z}}">
+                <label >{{z}}</label>
                 {% endfor %}
             </div>
-        {%endif%}
-        
-    
-    <div style="text-align: center;">
-    <br><br>
-    <a href="{{'redirect'}}">Home</a><br><br>
+            <div class="txt_field">
+                <input type="text"  name="person"  required>
+                <label>Name</label>
+            </div>
+            <div class="txt_field">
+                <input type="text"  name="status"  required>
+                <label>update attendence</label>
+            </div>
+            <input type="submit" />
+            <div class="signup_link">
+                <a href="{{'redirect'}}">Home</a>
+            </div>
+
+
+            
+                
+        </form>
     </div>
+    <div >
+        {% if st==1 %}
+        <div style="position:absolute; height: 100vh; width: 100%; background-color: white; display: flex;align-items: center;justify-content: center;flex-direction: column;">
+            <h2>Present :</h2>
+        {% for x in newp %}
+            <h4>{{x}}</h4>
+            {% endfor %}
+       
+            <h2>Absent :</h2>
+            {% for x in newa %}
+                <h4>{{x}}</h4>
+                {% endfor %}
+          
+        {%endif%}
+        <a href="{{'redirect'}}" class="btn btn-danger">Home</a>
+
+        </div>
+        
+        
+       .
+
+    </div>
+    
 </body>
+
 </html>
