--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
         <h1>Login</h1>
         <form action="{{ url_for('login')}}" id="mform"  method="POST">
             <div class="txt_field">
-                <input type="number"  name="check_id" min = "100" required>
+                <input type="number"  name="check_id"  required>
                 <label>personal id</label>
             </div>
             <div class="txt_field">
