--- a/templates/adminview.html
+++ b/templates/adminview.html
@@ -8,9 +8,29 @@
     <link rel="stylesheet" href="{{url_for('static', filename='admin.css')}}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css">    
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
-<body>
+<body style="background-image: url('https://images.unsplash.com/photo-1518714049508-96a3054cdaef?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1868&q=80');
+background-size: cover;color:white">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light " style="background: rgba(0,0,0,0.6);">
+        <div class="container-fluid" style="font-size: 20px;">
+          <a class="navbar-brand" href="#" style="margin-left:5%;"><i class="fas fa-atlas" style="font-size: 1.5em;"></i></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav" style="margin-left: 7vh;">
+              <a class="nav-link" href="{{'logout'}}"><i class="fab fa-github"></i></a>
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" href="{{'logout'}}">Logout</a>
+              
+             
+              
+            </div>
+          </div>
+        </div>
+    </nav>
+    
     <div class = "center">
         <h1>Welcome {{data['name'] | safe }}</h1>
         <hr>
@@ -18,16 +38,17 @@
             <div class="col" style="display:flex; justify-content:center;padding-bottom: 10px;">
                 
                     <div class="card" style="width: 18rem;">
-                        <img src="https://images.unsplash.com/photo-1599508704512-2f19efd1e35f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=675&q=80" class="card-img-top" alt="...">
-                        <div class="card-body">
+                        <img src="{{url_for('static', filename=data['image'])}}"  alt="...">
+
+                        <div class="card-body" style="color: black;">
                             <h3 style="text-align: center;">{{data['role']}}</h3>
                         </div>
                     </div>
                 </div>
 
                 
-                <div class="col" style="margin-left: 5px; margin-right: 5px;">
-                        <div class="colclass" style="background:#FAF0E6; border-radius: 10%;">
+                <div class="col" >
+                        <div class="colclass" style="background:rgba(0,0,0,0.6); border-radius: 10%; text-shadow: aliceblue; margin:auto; padding: 5vh;">
                             <div class="row">
                                 <div class="col">
                                     <h3 style="text-align: center;">Name: {{data['name'] | safe }}</h3>
@@ -71,7 +92,7 @@
                     <hr>
             </div>
             <hr>
-                    <h2>Functions</h2>
+                    <h1>Functions</h1>
 
                 <div class="row">
                     <div class="col d-flex p-2">
@@ -105,14 +126,7 @@
                     
                 </div>
                     <hr>
-                    <div class="row">
-                        <div class="col d-flex p-2">
-                            <a href="{{'redirect'}}">home</a>
-                        </div>
-                        <div class="col d-flex p-2">
-                            <a href="{{'logout'}}">logout</a>
-                        </div>
-                    </div>
+                    
                     
 
                 
@@ -124,8 +138,7 @@
         </div>
 
     </div>
-   
-
+    
 
 </body>
 </html>
