--- a/templates/studentview.html
+++ b/templates/studentview.html
@@ -8,8 +8,28 @@
     <title>Student</title>
     <link rel="stylesheet" href="{{url_for('static', filename='admin.css')}}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
-<body style="min-height:100vh">
+<body style="min-height:100vh;background-image: url('https://images.unsplash.com/photo-1518714049508-96a3054cdaef?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1868&q=80');
+background-size: cover;color:white;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light " style="background: rgba(0,0,0,0.6);">
+        <div class="container-fluid" style="font-size: 20px;">
+        <a class="navbar-brand" href="#" style="margin-left:5%;"><i class="fas fa-atlas" style="font-size: 1.5em;"></i></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav" style="margin-left: 7vh;">
+            <a class="nav-link" href="{{'logout'}}"><i class="fab fa-github"></i></a>
+            <a class="nav-link active" aria-current="page" href="{{'redirect'}}">Home</a>
+            <a class="nav-link" href="{{'logout'}}">Logout</a>
+            
+            
+            
+            </div>
+        </div>
+        </div>
+    </nav>
     <div class = "center">
         <h1>Welcome {{data['name'] | safe }} </h1>
         <hr>
@@ -18,8 +38,8 @@
             <div class="row">
                 <div class="col">
                     <div class="card" style="width: 18rem; margin: 0 auto;">
-                        <img src="https://images.unsplash.com/photo-1599508704512-2f19efd1e35f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=675&q=80" class="card-img-top" alt="...">
-                        <div class="card-body">
+                        <img src="{{url_for('static', filename=data['image'])}}"  alt="...">
+                        <div class="card-body" style="color: black;">
                             <h3 style="text-align: center;">{{data['role']}}</h3>
                         </div>
                     </div>
@@ -27,7 +47,7 @@
 
 
                 <div class="col ">
-                    <div class="colclass" style="background: #FAF0E6; border-radius: 20; margin-top: 10px;">
+                    <div class="colclass" style="background:rgba(0,0,0,0.6); border-radius: 20; margin-top: 10px;padding: 15px;">
                         <div class="row">
                             <div class="col">
                                 <h3 style="text-align: center;">Name: {{data['name'] | safe }}</h3>
@@ -61,14 +81,7 @@
 
                     
                     <hr>
-                    <div class="row">
-                        <div class="col d-flex p-2">
-                            <a href="{{'redirect'}}">home</a>
-                        </div>
-                        <div class="col d-flex p-2">
-                            <a href="{{'logout'}}">logout</a>
-                        </div>
-                    </div>
+                    
 
                 </div>
 
@@ -77,18 +90,30 @@
             </div>
 
         </div>
+        <h2>Function</h2>
+        <div style="display: flex; justify-content: center; margin-bottom: 10vh;">
+            <a href="{{'file'}}" class="btn btn-light">complain</a>
+        </div>
+        <h2>Attendance Collection</h2>
+        <div style="text-align: center; background-color: rgba(0,0,0,0.6); margin-left: 10vh;margin-right: 10vh;">
+            
+                 {% for x in at %}
+                 <p>{{x['_id']}} :</p>
+                <p>{{x['teacher']}} :</p>
+                <p>{{x['date']}} </p>
+              {%if data['personal_name'] in x['present']%}    
+                <p>present</p>
+                {% else %}
+                <p>absent</p>
+               {% endif%}
+               <hr style="color: white;">
+                {% endfor %} 
+        </div>
 
     </div>
-    <div>
-        <!-- {% for x in at %}
-            <p>{{x['teacher']}} :</p>
-          {%if data['personal_name'] in x['present']%}    
-            <p>present</p>
-            {% else %}
-            <p>absent</p>
-           {% endif%}
-            {% endfor %} -->
-        </div>
+
+    
+    
 </body>
 <script >
     var xValues = {{ teachernames | safe }};
