--- a/templates/teacherview.html
+++ b/templates/teacherview.html
@@ -7,8 +7,28 @@
     <title>Teacher</title>
     <link rel="stylesheet" href="{{url_for('static', filename='admin.css')}}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
-<body>
+<body style="background-image: url('https://images.unsplash.com/photo-1518714049508-96a3054cdaef?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1868&q=80');
+background-size: cover;color:white">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light " style="background: rgba(0,0,0,0.6);">
+        <div class="container-fluid" style="font-size: 20px;">
+          <a class="navbar-brand" href="#" style="margin-left:5%;"><i class="fas fa-atlas" style="font-size: 1.5em;"></i></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav" style="margin-left: 7vh;">
+              <a class="nav-link" href="{{'logout'}}"><i class="fab fa-github"></i></a>
+              <a class="nav-link active" aria-current="page" href="{{'redirect'}}">Home</a>
+              <a class="nav-link" href="{{'logout'}}">Logout</a>
+              
+             
+              
+            </div>
+          </div>
+        </div>
+    </nav>
     <div class = "center">
         <h1>Welcome {{data['name'] | safe }} </h1>
         <hr>
@@ -17,8 +37,8 @@
             <div class="row">
                 <div class="col" style="display: flex; justify-content: center;">
                     <div class="card" style="width: 18rem;">
-                        <img src="https://images.unsplash.com/photo-1599508704512-2f19efd1e35f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=675&q=80" class="card-img-top" alt="...">
-                        <div class="card-body">
+                        <img src="{{url_for('static', filename=data['image'])}}"  alt="...">
+                        <div class="card-body" style="color: rgba(0,0,0,1);">
                             <h3 style="text-align: center;">{{data['role']}}</h3>
                         </div>
                     </div>
@@ -26,7 +46,7 @@
 
 
                 <div class="col">
-                    <div class="colclass" style="background: #FAF0E6; border-radius: 20px; margin-top: 10px;">
+                    <div class="colclass" style="background:rgba(0,0,0,0.6); border-radius: 10%; text-shadow: aliceblue;"">
                         <div class="row">
                             <div class="col">
                                 <h3 style="text-align: center;">Name: {{data['name'] | safe }}</h3>
@@ -80,18 +100,14 @@
                         <div class="col d-flex p-2">
                             <a href="{{'editing'}}" class="btn btn-danger">Edit Student</a>
                         </div>
+                        <div class="col d-flex p-2">
+                            <a href="{{'view'}}" class="btn btn-info">complaints</a>
+                        </div>
                     </div>
 
                     
                     <hr>
-                    <div class="row">
-                        <div class="col d-flex p-2">
-                            <a href="{{'redirect'}}">home</a>
-                        </div>
-                        <div class="col d-flex p-2" style="color: red;">
-                            <a href="{{'logout'}}">logout</a>
-                        </div>
-                    </div>
+                    
 
                 </div>
 
@@ -103,7 +119,7 @@
 
     </div>
     
-
+   
     
 
 
