attended.html changed

--- a/static/attended.css
+++ b/static/attended.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
-    background: linear-gradient(120deg,rgb(252, 207, 3), rgb(255, 255, 255));
+    background: lavender;
     min-height: 100vh;
     
     
